@@ -30,6 +30,7 @@ Jonas Aule
 Justin Pogrob
 Koichi Harakawa
 Lee Semel
+Luis Diego García
 Maksim Rukomoynikov
 Marcin Skarbek
 Marcin Spoczynski
