@@ -9,6 +9,6 @@ from .provider import DropboxProvider
 class DropboxTests(create_oauth_tests(registry.by_id(DropboxProvider.id))):
     def get_mocked_response(self):
         # FIXME: Replace with actual/complete Dropbox response
-        return MockedResponse(200, u"""
+        return [MockedResponse(200, u"""
     { "uid": "123" }
-""")
+""")]
