@@ -1,3 +1,11 @@
+2014-01-15  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* "excessivedemon" contributed Flickr support, thanks!
+
+2013-12-26  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Luis Diego García contributed Amazon and Paypal support, thanks!
+
 2013-12-04  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Stuart Ross contributed LinkedIn OAuth 2.0 support, thanks!
